# mancli

./: Makefile  README.md  pyproject.toml
.circleci/: config.yml
features/: cli_hello_command.feature  cli_onboard_command.feature
features/steps/: cli_hello_command.py  cli_onboard_command.py
mancli/: hello.py  klick_brick_cli.py
tests/: test_cli_project.py
