[tool.poetry]
name = "mancli"
version = "0.1.0"
description = ""
authors = ["Mehmet Öner Yalçın <oneryalcin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
poetry = "^1.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
klickbrick = 'mancli.klick_brick_cli:main'

